[package]
name = "mock_rw"
version = "1.0.0"
authors = ["Patrick Gelvin <patrick@gelvin.dev>"]
edition = "2021"
description = "Mock Read and Write implementations that return an error"
homepage = "https://github.com/gelvinp/rs-mock_rw"
documentation = "https://github.com/gelvinp/rs-mock_rw"
repository = "https://github.com/gelvinp/rs-mock_rw"
readme = "Readme.md"
license = "CC0-1.0"
keywords = ["mock", "read", "write"]
categories = ["development-tools::testing"]